# AI_LAW

./: 2017.xlsx  2995_測試用50筆_2025.6.xlsx  Elasticsearch_utils.py  Embedding_model_setting.py  KG_100_setting.py  KG_500_setting_lawyer_input.py  KG_550_generate_semantic_summary.py  KG_600_Vectorize_And_Store_ES_Final_With_New.py  KG_675_Query_Semantic_ES.py  KG_690_Patch_Compensation_To_Chunks.py  KG_695_Patch_CaseType_FromLawyerInput_Optimized.py  KG_700_BatchSemanticSearcher_v5_with_dual_prompt_and_case_type.py  KG_700_BatchSemanticSearcher_v6.py  KG_700_BatchSemanticSearcher_v7_for_excel.py  KG_700_v10_CoT_FormatTester.py  KG_700_v9_RoleAware_NameExtractor.py  KG_800_Run.py  KG_delete_and_rebuild_conclusion.py  KG_test.py  Neo4j_manager_utils.py  Record.sh  index_chunks_log_20250422_062447.txt  index_chunks_log_20250430_052433.txt  missing_case_id_nodes.xlsx  neo4j_log_20250311_103345.txt  pyproject.toml  text_processor.py  ts_define_case_type.py  ts_input_filter.py  ts_models.py  ts_prompt.py  ts_prompt_check.py  ts_retrieval_system.py  ts_retrieve_main.py  ts_retrieve_main_nocot.py  專案分類說明.md  律師輸入_with_prompt.xlsx  律師輸入_結果.xlsx  整合_模擬律師輸入_2995.xlsx  模擬輸入_with_LLM前_0415.xlsx  (+4 more)
01_設定與配置/: .env  law_articles.ini  pyproject.toml
03_知識圖譜建構/: KG_100_setting.py  KG_150_update_case_type.py  KG_200_setting_laws_extend.py  KG_300_setting_compensation_extend.py  KG_400_setting_conclusion_extend.py  check_es_case_type.py  test_case_type_update.py
04_向量化與索引/: KG_650_Vectorize_Paragraph_Summaries.py
06_批量處理與生成/: BACKUP_INFO_20250627.md  BACKUP_NOTES_20250630_112647.md  (+52 more)
(+11 files in other folders)
